Increase font-size of all text boxes to prevent zoom in on mobile devices
HAVNTHEME-128

--- a/app/assets/stylesheets/workarea/storefront/components/_text_box.scss
+++ b/app/assets/stylesheets/workarea/storefront/components/_text_box.scss
@@ -22,12 +22,21 @@ $text-box-wide-width:         256px !default;
 
 $text-box-multi-line-height:  168px !default;
 
+$text-box-font-size: 16px !default;
+$text-box-font-size-wide: $font-size !default;
+
+
 
 .text-box {
     width: $text-box-width;
+    font-size: $text-box-font-size;
     border: 0;
     border-bottom: $text-box-border;
     transition: border $transition-time ease-in-out;
+
+    @include respond-to($medium-breakpoint) {
+        font-size: $text-box-font-size-wide;
+    }
 
     &:focus {
         @include focus-ring;
